# sanic-blueprint-error-demo

./: app.py  errors.py  pyproject.toml  test_error_bp.py  test_sentry.py
.github/workflows/: tests.yml
